Add proper title and description

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ permalink: /
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+        <title>Nicolás Guillén</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="{{ site.description }}">
+        <meta name="description" content="Welcome to my website. I'm a mobile software engineer with 9 years of experience. Here you'll find information about what I'm currently working on. For any inquiry, have a look and don't hesitate to contact me">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
         {% if site.favicon_img %}
         <link rel="shortcut icon" href="{{ site.favicon_img_path }}" />
