--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
----
-permalink: /
----
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Nicolás Guillén</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Welcome to my website. I'm a mobile software engineer with 9 years of experience. Here you'll find information about what I'm currently working on. For any inquiry, have a look and don't hesitate to contact me">
-        <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-        {% if site.favicon_img %}
-        <link rel="shortcut icon" href="{{ site.favicon_img_path }}" />
-        {% endif %}
-        <link rel="stylesheet" href="{{ "css/front.css" | prepend: site.baseurl }}">
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
+        <title>Nicolás Guillén</title>
+        <link rel="stylesheet" href='{{ "css/front.css" | prepend: site.baseurl }}' >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+        <link rel="shortcut icon" href="{{ site.favicon_img_path }}" />
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
+        <meta name="description" content="Welcome to my website. I'm a mobile software engineer with 9 years of experience. Here you'll find information about what I'm currently working on. For any inquiry, have a look and don't hesitate to contact me">
+    </head>
+    <body>
+        <div class="content">
+            <img src="{{ site.front_img_path }}" id="fullscreen">
+            <img src="{{ site.avatar_img_path }}" id="avatar">
+
+            <h3>{{ site.name }}</h3>
+            <h3>{{ site.description }}</h3>
+
+            <ul>
+                <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
+                <li><a class="fa fa-2x fa-linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}"><span class="description">LinkedIn</span></a></li>
+                <li><a class="fa fa-2x fa-instagram" href="https://instagram.com/{{ site.instagram_username }}"><span class="description">Instagram</span></a></li>
+                <li><a class="fa fa-2x fa-envelope" href="mailto:{{ site.email }}"><span class="description">Email</span></a></li>
+            </ul>
+        </div>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117944954-1"></script>
         <script>
@@ -23,38 +36,5 @@ permalink: /
             gtag('js', new Date());
             gtag('config', 'UA-117944954-1');
         </script>
-    </head>
-    <body>
-        <div class="content">
-            {% if site.front_img %}
-            <img src="{{ site.front_img_path }}" id="fullscreen">
-            {% endif %}
-
-            {% if site.avatar %}
-                <img src="{{ site.avatar_img_path }}" id="avatar">
-            {% endif %}
-
-            <h3>{{ site.name }}</h3>
-            <h3>{{ site.description }}</h3>
-
-            <ul>
-                {% if site.github_username %}
-                <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
-                {% endif %}
-
-                {% if site.linkedin_username %}
-                <li><a class="fa fa-2x fa-linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}"><span class="description">LinkedIn</span></a></li>
-                {% endif %}
-
-                {% if site.instagram_username %}
-                <li><a class="fa fa-2x fa-instagram" href="https://instagram.com/{{ site.instagram_username }}"><span class="description">Instagram</span></a></li>
-                {% endif %}
-
-                {% if site.email %}
-                <li><a class="fa fa-2x fa-envelope" href="mailto:{{ site.email }}"><span class="description">Email</span></a></li>
-                {% endif %}
-            </ul>
-        </div>
-
     </body>
 </html>
