--- a/index.html
+++ b/index.html
@@ -1,40 +1,115 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Personal website and portfolio for Android Developer, Nicolás Guillén.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <title>Nicolás Guillén</title>
-        <link rel="stylesheet" href='{{ "css/front.css" | prepend: site.baseurl }}' >
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-        <link rel="shortcut icon" href="{{ site.favicon_img_path }}" />
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet' type='text/css'>
-        <meta name="description" content="Welcome to my website. I'm a mobile software engineer with 9 years of experience. Here you'll find information about what I'm currently working on. For any inquiry, have a look and don't hesitate to contact me">
+
+        <!-- Add to homescreen for Chrome on Android -->
+        <meta name="mobile-web-app-capable" content="yes">
+        <link rel="icon" sizes="192x192" href="images/android_desktop.png">
+
+        <!-- Chrome theme color -->
+        <meta name="theme-color" content="#6d82f8">
+
+        <!-- Add to homescreen for Safari on iOS -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Nicolás Guillén">
+        <link rel="apple-touch-icon-precomposed" href="images/ios_desktop.png">
+
+        <!-- Tile icon for Win8 (144x144 + tile color) -->
+        <meta name="msapplication-TileImage" content="images/win8_desktop.png">
+        <meta name="msapplication-TileColor" content="#6d82f8">
+
+        <link rel="shortcut icon" href="images/favicon.png">
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css" />
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <div class="content">
-            <img src="{{ site.front_img_path }}" id="fullscreen">
-            <img src="{{ site.avatar_img_path }}" id="avatar">
-
-            <h3>{{ site.name }}</h3>
-            <h3>{{ site.description }}</h3>
-
-            <ul>
-                <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
-                <li><a class="fa fa-2x fa-linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}"><span class="description">LinkedIn</span></a></li>
-                <li><a class="fa fa-2x fa-instagram" href="https://instagram.com/{{ site.instagram_username }}"><span class="description">Instagram</span></a></li>
-                <li><a class="fa fa-2x fa-envelope" href="mailto:{{ site.email }}"><span class="description">Email</span></a></li>
-            </ul>
+    <body class="nico-guillen mdl-color--blue-grey-50 mdl-color-text--grey-700 mdl-base">
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+            <header class="mdl-layout__header mdl-color--blue_grey-500 mdl-color-text--white">
+                <div class="mdl-layout__header-row">
+                    <span class="mdl-layout-title">Nicolás Guillén</span>
+                </div>
+            </header>
+            <main class="mdl-layout__content">
+                <div class="mdl-layout__tab-panel is-active" id="overview">
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                        <header class="section__me mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--white mdl-color-text--white">
+                            <img class="me" src="images/profile.png"/>
+                        </header>
+                        <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
+                            <div class="mdl-card__supporting-text">
+                                <h4>Hi,</h4>
+                                I'm an Android Developer and occasional iOS Developer based in Switzerland. I currently work at Swissprime Technologies building <a href="https://kleverkey.com/" target="_blank">KleverKey</a>. I am passionate about the intersection between code and (Material) design, and enjoy creating experimental Android projects in my spare time.
+                            </div>
+                        </div>
+                    </section>
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                        <div class="mdl-card mdl-cell mdl-cell--12-col">
+                            <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+                                <h4 class="mdl-cell mdl-cell--12-col">Porfolio</h4>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon kleverkey">
+                                        <a href="https://kleverkey.com/" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>KleverKey</h5>
+                                    I am currently employed at Swissprime Technologies and form part of a small team tasked with building the Android version of their product KleverKey. It is a Software-as-a-Service product that turns smartphones into virtual keys.
+                                </div>
+                            </div>
+                            <div class="mdl-card__actions">
+                                <a href="https://github.com/nicolasguillen10" target="_blank" class="mdl-button">View more on Github</a>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                        <div class="mdl-card mdl-cell mdl-cell--12-col">
+                            <div class="mdl-card__supporting-text">
+                                <h4>Education &amp; skills</h4>
+                                I finished the first 3 years of the Software Engineering at Universidad Argentina de la Empresa (UADE). I code in Kotlin (and Java, when I have to) on a daily basis and aim to keep up to date with the latest Android libraries and best practices. I am also a strong supporter of Material Design.
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <footer class="mdl-mini-footer">
+                    <div class="mdl-mini-footer--left-section">
+                        <button class="mdl-mini-footer--social-btn social-btn social-btn__github"
+                                onclick="window.open('https://github.com/nicolasguillen10')">
+                            <span class="visuallyhidden">Github</span>
+                        </button>
+                        <button class="mdl-mini-footer--social-btn social-btn social-btn__instagram"
+                                onclick="window.open('https://www.instagram.com/nic0guillen')">
+                            <span class="visuallyhidden">Instagram</span>
+                        </button>
+                        <button class="mdl-mini-footer--social-btn social-btn social-btn__linkedin"
+                                onclick="window.open('https://linkedin.com/in/nicolasguillen10')">
+                            <span class="visuallyhidden">LinkedIn</span>
+                        </button>
+                    </div>
+                    <div class="mdl-mini-footer--right-section">
+                        <button class="mdl-mini-footer--social-btn social-btn social-btn__email"
+                                onclick="window.open('mailto:nicolasguillen10@gmail.com')">
+                            <span class="visuallyhidden">Email</span>
+                        </button>
+                    </div>
+                </footer>
+            </main>
         </div>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117944954-1"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-117944954-1');
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'UA-117944954-1');
         </script>
     </body>
 </html>
