Redesign as a material site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" sizes="192x192" href="images/android_desktop.png">
 
         <!-- Chrome theme color -->
-        <meta name="theme-color" content="#6d82f8">
+        <meta name="theme-color" content="#617d8a">
 
         <!-- Add to homescreen for Safari on iOS -->
         <meta name="apple-mobile-web-app-capable" content="yes">
@@ -22,7 +22,7 @@
 
         <!-- Tile icon for Win8 (144x144 + tile color) -->
         <meta name="msapplication-TileImage" content="images/win8_desktop.png">
-        <meta name="msapplication-TileColor" content="#6d82f8">
+        <meta name="msapplication-TileColor" content="#617d8a">
 
         <link rel="shortcut icon" href="images/favicon.png">
 
