--- a/index.html
+++ b/index.html
@@ -64,9 +64,27 @@
                                     <h5>KleverKey</h5>
                                     I am currently employed at Swissprime Technologies and form part of a small team tasked with building the Android version of their product KleverKey. It is a Software-as-a-Service product that turns smartphones into virtual keys.
                                 </div>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon kointlin">
+                                        <a href="https://play.google.com/store/apps/details?id=com.nicolasguillen.kointlin" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>Kointlin</h5>
+                                    I am developing Kointlin as my personal open-source project. It allows one to keep track of their cryptographic assets' price in a very simple way.
+                                </div>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon kointlin">
+                                        <a href="https://play.google.com/store/apps/details?id=com.nicolasguillen.kointlin" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>Kointlin</h5>
+                                    I am developing Kointlin as my personal open-source project. It allows one to keep track of their cryptographic assets' price in a very simple way.
+                                </div>
                             </div>
                             <div class="mdl-card__actions">
-                                <a href="https://github.com/nicolasguillen10" target="_blank" class="mdl-button">View more on Github</a>
+                                <a href="https://github.com/nicolasguillen" target="_blank" class="mdl-button">View more on Github</a>
                             </div>
                         </div>
                     </section>
@@ -74,7 +92,7 @@
                         <div class="mdl-card mdl-cell mdl-cell--12-col">
                             <div class="mdl-card__supporting-text">
                                 <h4>Education &amp; skills</h4>
-                                I finished the first 3 years of the Software Engineering at Universidad Argentina de la Empresa (UADE). I code in Kotlin (and Java, when I have to) on a daily basis and aim to keep up to date with the latest Android libraries and best practices. I am also a strong supporter of Material Design.
+                                I finished the first 3 years of Software Engineering at Universidad Argentina de la Empresa (UADE). I code in Kotlin (and Java, when I have to) on a daily basis and aim to keep up to date with the latest Android libraries and best practices. I am also a strong supporter of Material Design.
                             </div>
                         </div>
                     </section>
@@ -82,7 +100,7 @@
                 <footer class="mdl-mini-footer">
                     <div class="mdl-mini-footer--left-section">
                         <button class="mdl-mini-footer--social-btn social-btn social-btn__github"
-                                onclick="window.open('https://github.com/nicolasguillen10')">
+                                onclick="window.open('https://github.com/nicolasguillen')">
                             <span class="visuallyhidden">Github</span>
                         </button>
                         <button class="mdl-mini-footer--social-btn social-btn social-btn__instagram"
