--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Add to homescreen for Chrome on Android -->
         <meta name="mobile-web-app-capable" content="yes">
-        <link rel="icon" sizes="192x192" href="images/android_desktop.png">
+        <link rel="icon" sizes="192x192" href="images/profile.png">
 
         <!-- Chrome theme color -->
         <meta name="theme-color" content="#617d8a">
@@ -18,7 +18,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="Nicolás Guillén">
-        <link rel="apple-touch-icon-precomposed" href="images/ios_desktop.png">
+        <link rel="apple-touch-icon-precomposed" href="images/profile.png">
 
         <!-- Tile icon for Win8 (144x144 + tile color) -->
         <meta name="msapplication-TileImage" content="images/win8_desktop.png">
@@ -42,19 +42,48 @@
                 <div class="mdl-layout__tab-panel is-active" id="overview">
                     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
                         <header class="section__me mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--white mdl-color-text--white">
-                            <img class="me" src="images/profile.png"/>
+                            <img class="me" src="images/profile.jpg"/>
                         </header>
                         <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
                             <div class="mdl-card__supporting-text">
                                 <h4>Hi there, </h4>
-                                I'm an Android Developer and occasional iOS Developer based in Switzerland. I currently work at Swissprime Technologies building <a href="https://kleverkey.com/" target="_blank">KleverKey</a>. I am passionate about the intersection between code and (Material) design, and enjoy creating experimental Android projects in my spare time.
+                                I'm a Mobile Developer based in Switzerland. I currently work at comparis.ch. I am passionate about the intersection between code and user experience, and enjoy creating experimental Android projects in my spare time.
                             </div>
                         </div>
                     </section>
                     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
                         <div class="mdl-card mdl-cell mdl-cell--12-col">
                             <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
-                                <h4 class="mdl-cell mdl-cell--12-col">Porfolio</h4>
+                                <h4 class="mdl-cell mdl-cell--12-col">
+                                    Professional Portfolio
+                                </h4>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon homefinder">
+                                        <a href="https://comparis.ch/" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>Property Switzerland</h5>
+                                    Find a new home from the major property portals, such as Homegate, Immoscout24, Newhome and over 10 more.
+                                </div>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon carfinder">
+                                        <a href="https://comparis.ch/" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>Car Market Switzerland</h5>
+                                    All ads from the major car portals, such as Autoscout24, CAR FOR YOU and other large Swiss portals.
+                                </div>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon pricefinder">
+                                        <a href="https://comparis.ch/" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>Price Finder Switzerland</h5>
+                                    Search products in various product categories as well as special offers, helping you choose the right product at the right price.
+                                </div>
                                 <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
                                     <div class="app_icon kleverkey">
                                         <a href="https://kleverkey.com/" target="_blank" class="fill-div"></a>
@@ -62,8 +91,20 @@
                                 </div>
                                 <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                     <h5>KleverKey</h5>
-                                    I am currently employed at Swissprime Technologies and form part of a small team tasked with building the Android version of their product KleverKey. It is a Software-as-a-Service product that turns smartphones into virtual keys.
+                                    Access and manage your smart-locks and who can do as well.
                                 </div>
+                            </div>
+                            <div class="mdl-card__actions">
+                                <a href="https://linkedin.com/in/nicolasguillen10" target="_blank" class="mdl-button">View more on Linkedin</a>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                        <div class="mdl-card mdl-cell mdl-cell--12-col">
+                            <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+                                <h4 class="mdl-cell mdl-cell--12-col">
+                                    Personal Portfolio
+                                </h4>
                                 <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
                                     <div class="app_icon kointlin">
                                         <a href="https://play.google.com/store/apps/details?id=com.nicolasguillen.kointlin" target="_blank" class="fill-div"></a>
@@ -71,7 +112,16 @@
                                 </div>
                                 <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                     <h5>Kointlin</h5>
-                                    I am developing Kointlin as my personal open-source project. It allows one to keep track of their cryptographic assets' price in a very simple way.
+                                    Keep track of their cryptographic assets' price in a very simple way.
+                                </div>
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+                                    <div class="app_icon homepi">
+                                        <a href="https://github.com/nicolasguillen/homePi" target="_blank" class="fill-div"></a>
+                                    </div>
+                                </div>
+                                <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                    <h5>HomePi</h5>
+                                    AndroidThings project to control plant sensors and my Google Home.
                                 </div>
                             </div>
                             <div class="mdl-card__actions">
